py_pubsub/log/build_2025-04-21_12-59-12/py_pubsub/stderr.log
  File "/home/barenbo/Desktop/Code/robot/lab2/py_pubsub/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/publisher_member_function.py", line 48
    if ((front_sensor != None) and (left_sensor != None))
                                                         ^
SyntaxError: expected ':'

